# SESEMMI

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  Dockerfile  LANGGRAPH_IMPLEMENTATION_PLAN.md  LANGGRAPH_MIGRATION_PLAN.md  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json
.github/workflows/: build-push-deploy.yml  build-push.yml  ci-backend.yml  ci-docker.yml  ci-frontend.yml  deploy.yml
eval/: EVAL_GUIDELINE.md  queries.json  run_eval.py  submit_job.sh
evals/: ANNOTATION_GUIDE.md
k8s/: README.md  app.yaml  configmap.yaml  ingress.yaml  llm.yaml  ollama.yaml  postgres.yaml  secret.yaml
llm-service/: Dockerfile  langgraph.json  pyproject.toml  requirements.txt
llm-service/.langgraph_api/: .langgraph_ops.pckl
llm-service/app/: config.py  language.py  main.py
llm-service/app/graph/: CKG_QUERY_DESIGN_GUIDE.md  builder.py  clarify.py  examples.py  model.py  schema_corpus.py  state.py  validation.py
llm-service/app/graph/nodes/: answer.py  execute.py  generate.py  intake.py  judge.py  retrieve.py  validate.py
llm-service/app/graph/tools/: graph_traverse.py  ontology_parser.py  sparql_execute.py  wikidata.py
llm-service/app/llm/: chain.py  examples.py  prompt.py  schema_context.py
llm-service/app/rag/: corpus.py  embeddings.py  retrieve.py  schema_corpus.py  store.py
llm-service/tests/: conftest.py  test_chain.py  test_prompt.py  test_retrieve.py  test_store.py
llm-service/tests/test_graph/: test_clarify.py  test_graph_traverse.py  test_integration.py  test_nodes.py  test_sparql_execute.py  test_validate.py  test_wikidata_tool.py
scripts/: add_few_shots.py
(+72 files in other folders)
