[project]
name = "sesemmi-llm-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.10",
    "langchain-core>=1.2.16",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-postgres>=0.0.17",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.41.0",
    "httpx>=0.28.1",
    "langgraph>=0.2.0",
    "rdflib>=7.0.0",
    "langsmith>=0.1.0",
    "langchain-mcp-adapters>=0.2.0",
]

[dependency-groups]
dev = [
    "black>=25.0.0",
    "ipython>=9.13.0",
    "langgraph-cli[inmem]>=0.4.15",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py312"]
